--- a/timer/index.html
+++ b/timer/index.html
@@ -14,7 +14,7 @@
       <source src="//media2.zenrus.ru/media/video/snow.ogv" type="video/ogg">
     </video>
     <section class="container">
-      <p class="text">Till the New Year left</div>
+      <p class="text">Till the winter left</div>
       <div class="timer" id="timer-1">
         <div class="field">
           <span class="value" data-value="days">11</span>
